--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@pinia/nuxt": "^0.9.0",
     "nuxt": "^3.15.4",
+    "pinia": "^2.3.1",
     "vue": "latest",
     "vue-router": "latest"
   },
